--- a/server/public/Global.css
+++ b/server/public/Global.css
@@ -970,3 +970,24 @@ button {
 .selected_layer {
   border: 2px solid green !important;
 }
+
+.font-inp {
+  width: 100%;
+  height: 30px;
+  border-radius: 10px;
+  padding-inline: 8px;
+  border: 1px solid #ddd;
+  background-color: white;
+}
+
+.font-inp > select {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.font-inp > select > option {
+  width: 200%;
+}
