--- a/server/public/Global.css
+++ b/server/public/Global.css
@@ -978,6 +978,7 @@ button {
   padding-inline: 8px;
   border: 1px solid #ddd;
   background-color: white;
+  position: relative;
 }
 
 .font-inp > select {
@@ -991,4 +992,46 @@ button {
 .font-inp > select > option {
   width: 200%;
   font-size: 17px;
+}
+/* -------------- */
+
+.custom-dialog {
+  position: absolute;
+  top: 28px;
+  left: -1px;
+  height: 350px;
+  z-index: 20;
+  width: 101%;
+  padding-top: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background: white;
+  border: 1px solid #ddd;
+  border-top: 0;
+  display: none;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  user-select: none;
+}
+.custom-dialog.open {
+  display: flex;
+  flex-direction: column;
+}
+.custom-dialog > ul > li {
+  padding-inline: 10px;
+  height: 28px;
+  padding-top: 2px;
+  &:hover {
+    background: #e9e9e9;
+  }
+}
+
+.rem-bottom-border {
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.selected-font {
+  font-size: 16px;
+  padding-top: 5px;
 }
